# yarra

./: Cargo.toml  LICENSE  README.md  requirements.md
.github/workflows/: ci.yml  release.yml  update-version.yml
src/: analytics.rs  blocker.rs  config.rs  main.rs
tests/: integration_tests.rs
